--- a/test/nonconvex/Test Nonconvex 500-500.ipynb
+++ b/test/nonconvex/Test Nonconvex 500-500.ipynb
@@ -949,7 +949,7 @@
     "# hyperparameters\n",
     "penalty_weight = 100  # weight of constraint violation penealty\n",
     "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
-    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "hsize = 1024          # width of hidden layers for solution mapping\n",
     "lr = 1e-3             # learning rate"
    ]
   },
@@ -988,90 +988,153 @@
      "output_type": "stream",
      "text": [
       "Epoch 0, Validation Loss: 12499.07\n",
-      "Epoch 1, Validation Loss: 1784.93\n",
-      "Epoch 2, Validation Loss: 23.64\n",
-      "Epoch 3, Validation Loss: 5.83\n",
-      "Epoch 4, Validation Loss: -6.93\n",
-      "Epoch 5, Validation Loss: -16.85\n",
-      "Epoch 6, Validation Loss: -26.62\n",
-      "Epoch 7, Validation Loss: -33.85\n",
-      "Epoch 8, Validation Loss: -38.44\n",
-      "Epoch 9, Validation Loss: -43.11\n",
-      "Epoch 10, Validation Loss: -45.13\n",
-      "Epoch 11, Validation Loss: -47.39\n",
-      "Epoch 12, Validation Loss: -48.66\n",
-      "Epoch 13, Validation Loss: -49.37\n",
-      "Epoch 14, Validation Loss: -50.28\n",
-      "Epoch 15, Validation Loss: -51.22\n",
-      "Epoch 16, Validation Loss: -52.48\n",
-      "Epoch 17, Validation Loss: -52.41\n",
-      "Epoch 18, Validation Loss: -52.47\n",
-      "Epoch 19, Validation Loss: -54.53\n",
-      "Epoch 20, Validation Loss: -54.88\n",
-      "Epoch 21, Validation Loss: -54.20\n",
-      "Epoch 22, Validation Loss: -55.63\n",
-      "Epoch 23, Validation Loss: -55.99\n",
-      "Epoch 24, Validation Loss: -54.68\n",
-      "Epoch 25, Validation Loss: -54.76\n",
-      "Epoch 26, Validation Loss: -55.40\n",
-      "Epoch 27, Validation Loss: -54.58\n",
-      "Epoch 28, Validation Loss: -55.51\n",
-      "Epoch 29, Validation Loss: -53.97\n",
-      "Epoch 30, Validation Loss: -54.32\n",
-      "Epoch 31, Validation Loss: -56.51\n",
-      "Epoch 32, Validation Loss: -55.65\n",
-      "Epoch 33, Validation Loss: -56.19\n",
-      "Epoch 34, Validation Loss: -55.39\n",
-      "Epoch 35, Validation Loss: -56.41\n",
-      "Epoch 36, Validation Loss: -56.57\n",
-      "Epoch 37, Validation Loss: -56.81\n",
-      "Epoch 38, Validation Loss: -57.13\n",
-      "Epoch 39, Validation Loss: -55.95\n",
-      "Epoch 40, Validation Loss: -56.59\n",
-      "Epoch 41, Validation Loss: -54.86\n",
-      "Epoch 42, Validation Loss: -55.40\n",
-      "Epoch 43, Validation Loss: -55.95\n",
-      "Epoch 44, Validation Loss: -56.41\n",
-      "Epoch 45, Validation Loss: -55.73\n",
-      "Epoch 46, Validation Loss: -56.41\n",
-      "Epoch 47, Validation Loss: -56.95\n",
-      "Epoch 48, Validation Loss: -56.79\n",
-      "Epoch 49, Validation Loss: -54.07\n",
-      "Epoch 50, Validation Loss: -57.47\n",
-      "Epoch 51, Validation Loss: -56.26\n",
-      "Epoch 52, Validation Loss: -56.81\n",
-      "Epoch 53, Validation Loss: -56.89\n",
-      "Epoch 54, Validation Loss: -55.37\n",
-      "Epoch 55, Validation Loss: -55.24\n",
-      "Epoch 56, Validation Loss: -55.85\n",
-      "Epoch 57, Validation Loss: -56.14\n",
-      "Epoch 58, Validation Loss: -56.15\n",
-      "Epoch 59, Validation Loss: -56.54\n",
-      "Epoch 60, Validation Loss: -56.62\n",
-      "Epoch 61, Validation Loss: -57.69\n",
-      "Epoch 62, Validation Loss: -56.32\n",
-      "Epoch 63, Validation Loss: -57.03\n",
-      "Epoch 64, Validation Loss: -56.93\n",
-      "Epoch 65, Validation Loss: -56.77\n",
-      "Epoch 66, Validation Loss: -56.71\n",
-      "Epoch 67, Validation Loss: -57.42\n",
-      "Epoch 68, Validation Loss: -54.92\n",
-      "Epoch 69, Validation Loss: -57.02\n",
-      "Epoch 70, Validation Loss: -56.23\n",
-      "Epoch 71, Validation Loss: -56.95\n",
-      "Epoch 72, Validation Loss: -56.69\n",
-      "Epoch 73, Validation Loss: -57.11\n",
-      "Epoch 74, Validation Loss: -55.86\n",
-      "Epoch 75, Validation Loss: -55.25\n",
-      "Epoch 76, Validation Loss: -56.06\n",
-      "Epoch 77, Validation Loss: -57.31\n",
-      "Epoch 78, Validation Loss: -56.49\n",
-      "Epoch 79, Validation Loss: -56.45\n",
-      "Epoch 80, Validation Loss: -56.21\n",
-      "Early stopping at epoch 80\n",
+      "Epoch 1, Validation Loss: 18.64\n",
+      "Epoch 2, Validation Loss: -1.59\n",
+      "Epoch 3, Validation Loss: -18.05\n",
+      "Epoch 4, Validation Loss: -21.73\n",
+      "Epoch 5, Validation Loss: -26.56\n",
+      "Epoch 6, Validation Loss: -27.22\n",
+      "Epoch 7, Validation Loss: -27.58\n",
+      "Epoch 8, Validation Loss: -34.26\n",
+      "Epoch 9, Validation Loss: -35.87\n",
+      "Epoch 10, Validation Loss: -38.61\n",
+      "Epoch 11, Validation Loss: -40.10\n",
+      "Epoch 12, Validation Loss: -41.03\n",
+      "Epoch 13, Validation Loss: -39.50\n",
+      "Epoch 14, Validation Loss: -38.63\n",
+      "Epoch 15, Validation Loss: -43.66\n",
+      "Epoch 16, Validation Loss: -45.00\n",
+      "Epoch 17, Validation Loss: -40.15\n",
+      "Epoch 18, Validation Loss: -44.84\n",
+      "Epoch 19, Validation Loss: -47.01\n",
+      "Epoch 20, Validation Loss: -45.50\n",
+      "Epoch 21, Validation Loss: -46.09\n",
+      "Epoch 22, Validation Loss: -45.65\n",
+      "Epoch 23, Validation Loss: -43.79\n",
+      "Epoch 24, Validation Loss: -46.50\n",
+      "Epoch 25, Validation Loss: -48.12\n",
+      "Epoch 26, Validation Loss: -50.34\n",
+      "Epoch 27, Validation Loss: -46.89\n",
+      "Epoch 28, Validation Loss: -46.52\n",
+      "Epoch 29, Validation Loss: -46.16\n",
+      "Epoch 30, Validation Loss: -48.99\n",
+      "Epoch 31, Validation Loss: -46.66\n",
+      "Epoch 32, Validation Loss: -48.97\n",
+      "Epoch 33, Validation Loss: -48.50\n",
+      "Epoch 34, Validation Loss: -50.67\n",
+      "Epoch 35, Validation Loss: -50.10\n",
+      "Epoch 36, Validation Loss: -50.24\n",
+      "Epoch 37, Validation Loss: -52.70\n",
+      "Epoch 38, Validation Loss: -49.97\n",
+      "Epoch 39, Validation Loss: -51.52\n",
+      "Epoch 40, Validation Loss: -51.38\n",
+      "Epoch 41, Validation Loss: -51.09\n",
+      "Epoch 42, Validation Loss: -49.89\n",
+      "Epoch 43, Validation Loss: -50.54\n",
+      "Epoch 44, Validation Loss: -51.12\n",
+      "Epoch 45, Validation Loss: -51.91\n",
+      "Epoch 46, Validation Loss: -51.68\n",
+      "Epoch 47, Validation Loss: -52.60\n",
+      "Epoch 48, Validation Loss: -51.54\n",
+      "Epoch 49, Validation Loss: -51.31\n",
+      "Epoch 50, Validation Loss: -51.53\n",
+      "Epoch 51, Validation Loss: -50.88\n",
+      "Epoch 52, Validation Loss: -52.03\n",
+      "Epoch 53, Validation Loss: -51.75\n",
+      "Epoch 54, Validation Loss: -51.43\n",
+      "Epoch 55, Validation Loss: -54.49\n",
+      "Epoch 56, Validation Loss: -53.30\n",
+      "Epoch 57, Validation Loss: -53.41\n",
+      "Epoch 58, Validation Loss: -52.93\n",
+      "Epoch 59, Validation Loss: -53.21\n",
+      "Epoch 60, Validation Loss: -53.41\n",
+      "Epoch 61, Validation Loss: -51.26\n",
+      "Epoch 62, Validation Loss: -53.47\n",
+      "Epoch 63, Validation Loss: -52.78\n",
+      "Epoch 64, Validation Loss: -53.84\n",
+      "Epoch 65, Validation Loss: -53.20\n",
+      "Epoch 66, Validation Loss: -54.56\n",
+      "Epoch 67, Validation Loss: -54.83\n",
+      "Epoch 68, Validation Loss: -54.71\n",
+      "Epoch 69, Validation Loss: -53.91\n",
+      "Epoch 70, Validation Loss: -51.72\n",
+      "Epoch 71, Validation Loss: -54.55\n",
+      "Epoch 72, Validation Loss: -52.89\n",
+      "Epoch 73, Validation Loss: -52.28\n",
+      "Epoch 74, Validation Loss: -52.64\n",
+      "Epoch 75, Validation Loss: -54.17\n",
+      "Epoch 76, Validation Loss: -54.74\n",
+      "Epoch 77, Validation Loss: -53.92\n",
+      "Epoch 78, Validation Loss: -52.94\n",
+      "Epoch 79, Validation Loss: -53.72\n",
+      "Epoch 80, Validation Loss: -54.46\n",
+      "Epoch 81, Validation Loss: -54.10\n",
+      "Epoch 82, Validation Loss: -53.94\n",
+      "Epoch 83, Validation Loss: -55.23\n",
+      "Epoch 84, Validation Loss: -54.64\n",
+      "Epoch 85, Validation Loss: -54.75\n",
+      "Epoch 86, Validation Loss: -55.01\n",
+      "Epoch 87, Validation Loss: -53.84\n",
+      "Epoch 88, Validation Loss: -56.06\n",
+      "Epoch 89, Validation Loss: -56.00\n",
+      "Epoch 90, Validation Loss: -56.49\n",
+      "Epoch 91, Validation Loss: -55.44\n",
+      "Epoch 92, Validation Loss: -54.77\n",
+      "Epoch 93, Validation Loss: -56.46\n",
+      "Epoch 94, Validation Loss: -53.45\n",
+      "Epoch 95, Validation Loss: -55.68\n",
+      "Epoch 96, Validation Loss: -54.47\n",
+      "Epoch 97, Validation Loss: -55.49\n",
+      "Epoch 98, Validation Loss: -56.33\n",
+      "Epoch 99, Validation Loss: -55.72\n",
+      "Epoch 100, Validation Loss: -56.18\n",
+      "Epoch 101, Validation Loss: -53.02\n",
+      "Epoch 102, Validation Loss: -55.20\n",
+      "Epoch 103, Validation Loss: -52.24\n",
+      "Epoch 104, Validation Loss: -56.03\n",
+      "Epoch 105, Validation Loss: -53.13\n",
+      "Epoch 106, Validation Loss: -55.50\n",
+      "Epoch 107, Validation Loss: -55.18\n",
+      "Epoch 108, Validation Loss: -56.49\n",
+      "Epoch 109, Validation Loss: -56.45\n",
+      "Epoch 110, Validation Loss: -56.79\n",
+      "Epoch 111, Validation Loss: -53.04\n",
+      "Epoch 112, Validation Loss: -55.72\n",
+      "Epoch 113, Validation Loss: -55.87\n",
+      "Epoch 114, Validation Loss: -55.49\n",
+      "Epoch 115, Validation Loss: -55.84\n",
+      "Epoch 116, Validation Loss: -56.35\n",
+      "Epoch 117, Validation Loss: -55.76\n",
+      "Epoch 118, Validation Loss: -54.11\n",
+      "Epoch 119, Validation Loss: -55.73\n",
+      "Epoch 120, Validation Loss: -54.32\n",
+      "Epoch 121, Validation Loss: -55.20\n",
+      "Epoch 122, Validation Loss: -55.78\n",
+      "Epoch 123, Validation Loss: -56.32\n",
+      "Epoch 124, Validation Loss: -57.31\n",
+      "Epoch 125, Validation Loss: -54.75\n",
+      "Epoch 126, Validation Loss: -56.83\n",
+      "Epoch 127, Validation Loss: -55.88\n",
+      "Epoch 128, Validation Loss: -56.66\n",
+      "Epoch 129, Validation Loss: -56.32\n",
+      "Epoch 130, Validation Loss: -56.08\n",
+      "Epoch 131, Validation Loss: -55.42\n",
+      "Epoch 132, Validation Loss: -55.83\n",
+      "Epoch 133, Validation Loss: -56.22\n",
+      "Epoch 134, Validation Loss: -56.66\n",
+      "Epoch 135, Validation Loss: -55.65\n",
+      "Epoch 136, Validation Loss: -55.97\n",
+      "Epoch 137, Validation Loss: -55.71\n",
+      "Epoch 138, Validation Loss: -56.53\n",
+      "Epoch 139, Validation Loss: -55.92\n",
+      "Epoch 140, Validation Loss: -54.99\n",
+      "Epoch 141, Validation Loss: -56.91\n",
+      "Epoch 142, Validation Loss: -54.65\n",
+      "Epoch 143, Validation Loss: -56.31\n",
+      "Early stopping at epoch 143\n",
       "Best model loaded.\n",
       "Training complete.\n",
-      "The training time is 86.87 sec.\n"
+      "The training time is 189.69 sec.\n"
      ]
     }
    ],
@@ -1098,22 +1161,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:04<00:00,  1.54it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [01:13<00:00,  1.37it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  100.000000             100.0    100.000000\n",
-      "mean   101.330000               0.0      0.002229\n",
-      "std      1.395527               0.0      0.000753\n",
-      "min     98.956071               0.0      0.001000\n",
-      "25%    100.068419               0.0      0.002000\n",
-      "50%    101.238002               0.0      0.002039\n",
-      "75%    102.397456               0.0      0.002515\n",
-      "max    104.902993               0.0      0.007276\n",
+      "            Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1.000000e+02             100.0    100.000000\n",
+      "mean   1.048862e+02               0.0      0.003971\n",
+      "std    1.428245e-14               0.0      0.000962\n",
+      "min    1.048862e+02               0.0      0.001484\n",
+      "25%    1.048862e+02               0.0      0.003506\n",
+      "50%    1.048862e+02               0.0      0.004013\n",
+      "75%    1.048862e+02               0.0      0.004438\n",
+      "max    1.048862e+02               0.0      0.007432\n",
       "Number of infeasible solution: 0\n"
      ]
     }
