--- a/test/rosenbrock/Test Rosenbrock 50-1.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-1.ipynb
@@ -1012,9 +1012,218 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b5703dbf-2a27-48c9-b34a-4327276c42a1",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "4ff86f01-5e86-47fb-b61e-a1354836b26d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "44a21c5f-db3d-47b5-b84f-460e6401bfbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "30ef9c86-7dc7-4548-ac1d-247ec04a24c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmRosenbrock\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"p\", \"a\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"p\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "18401a84-45d1-4f7b-a932-686550c1b3fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 229.21\n",
+      "Epoch 1, Validation Loss: 54.34\n",
+      "Epoch 2, Validation Loss: 34.81\n",
+      "Epoch 3, Validation Loss: 27.14\n",
+      "Epoch 4, Validation Loss: 26.12\n",
+      "Epoch 5, Validation Loss: 27.36\n",
+      "Epoch 6, Validation Loss: 26.06\n",
+      "Epoch 7, Validation Loss: 24.06\n",
+      "Epoch 8, Validation Loss: 24.20\n",
+      "Epoch 9, Validation Loss: 24.05\n",
+      "Epoch 10, Validation Loss: 24.00\n",
+      "Epoch 11, Validation Loss: 24.52\n",
+      "Epoch 12, Validation Loss: 25.52\n",
+      "Epoch 13, Validation Loss: 24.21\n",
+      "Epoch 14, Validation Loss: 24.32\n",
+      "Epoch 15, Validation Loss: 23.93\n",
+      "Epoch 16, Validation Loss: 24.04\n",
+      "Epoch 17, Validation Loss: 25.36\n",
+      "Epoch 18, Validation Loss: 24.35\n",
+      "Epoch 19, Validation Loss: 24.03\n",
+      "Epoch 20, Validation Loss: 23.97\n",
+      "Epoch 21, Validation Loss: 24.95\n",
+      "Epoch 22, Validation Loss: 23.81\n",
+      "Epoch 23, Validation Loss: 24.14\n",
+      "Epoch 24, Validation Loss: 25.13\n",
+      "Epoch 25, Validation Loss: 24.18\n",
+      "Epoch 26, Validation Loss: 24.24\n",
+      "Epoch 27, Validation Loss: 25.23\n",
+      "Epoch 28, Validation Loss: 24.03\n",
+      "Epoch 29, Validation Loss: 24.17\n",
+      "Epoch 30, Validation Loss: 24.24\n",
+      "Epoch 31, Validation Loss: 24.10\n",
+      "Epoch 32, Validation Loss: 24.17\n",
+      "Epoch 33, Validation Loss: 23.92\n",
+      "Epoch 34, Validation Loss: 23.73\n",
+      "Epoch 35, Validation Loss: 24.11\n",
+      "Epoch 36, Validation Loss: 24.17\n",
+      "Epoch 37, Validation Loss: 23.82\n",
+      "Epoch 38, Validation Loss: 24.69\n",
+      "Epoch 39, Validation Loss: 23.91\n",
+      "Epoch 40, Validation Loss: 23.90\n",
+      "Epoch 41, Validation Loss: 24.03\n",
+      "Epoch 42, Validation Loss: 24.19\n",
+      "Epoch 43, Validation Loss: 24.48\n",
+      "Epoch 44, Validation Loss: 23.88\n",
+      "Epoch 45, Validation Loss: 24.01\n",
+      "Epoch 46, Validation Loss: 23.92\n",
+      "Epoch 47, Validation Loss: 24.08\n",
+      "Epoch 48, Validation Loss: 24.29\n",
+      "Epoch 49, Validation Loss: 23.86\n",
+      "Epoch 50, Validation Loss: 24.12\n",
+      "Epoch 51, Validation Loss: 24.25\n",
+      "Epoch 52, Validation Loss: 24.39\n",
+      "Epoch 53, Validation Loss: 23.90\n",
+      "Early stopping at epoch 53\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 70.30 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f9b65cda-f7cc-4b30-be01-13b725adfc07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 309.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean    25.072254               0.0      0.001824\n",
+      "std      9.977888               0.0      0.001264\n",
+      "min      6.493151               0.0      0.000000\n",
+      "25%     17.437518               0.0      0.001002\n",
+      "50%     25.276055               0.0      0.001999\n",
+      "75%     31.784205               0.0      0.002047\n",
+      "max     49.411275               0.0      0.011654\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
+    "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_blocks*2):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "df.to_csv(\"result/rb_st_50-1.csv\")\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f917be4-2e2e-4a66-8b00-31e37913738c",
+   "id": "4b8fab7a-9089-41f5-bde8-7b684045c8db",
    "metadata": {},
    "outputs": [],
    "source": []
