--- a/test/rosenbrock/Test Rosenbrock 50-10.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-10.ipynb
@@ -1056,9 +1056,268 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79701b52-95b8-4507-a35f-de6181caf905",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "43ebb8a0-bbf2-40e9-9070-db71364f66f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9abf5785-82d5-49e2-a229-517a082496a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6ba29d79-e8dd-4238-b620-25f235240654",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmRosenbrock\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"p\", \"a\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"p\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "486764af-181e-4516-a5d6-69db8c8f5b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 2284.40\n",
+      "Epoch 1, Validation Loss: 374.33\n",
+      "Epoch 2, Validation Loss: 219.78\n",
+      "Epoch 3, Validation Loss: 124.98\n",
+      "Epoch 4, Validation Loss: 104.83\n",
+      "Epoch 5, Validation Loss: 95.40\n",
+      "Epoch 6, Validation Loss: 85.53\n",
+      "Epoch 7, Validation Loss: 76.12\n",
+      "Epoch 8, Validation Loss: 71.40\n",
+      "Epoch 9, Validation Loss: 77.14\n",
+      "Epoch 10, Validation Loss: 75.25\n",
+      "Epoch 11, Validation Loss: 71.81\n",
+      "Epoch 12, Validation Loss: 71.41\n",
+      "Epoch 13, Validation Loss: 71.24\n",
+      "Epoch 14, Validation Loss: 69.16\n",
+      "Epoch 15, Validation Loss: 70.23\n",
+      "Epoch 16, Validation Loss: 71.02\n",
+      "Epoch 17, Validation Loss: 68.93\n",
+      "Epoch 18, Validation Loss: 69.23\n",
+      "Epoch 19, Validation Loss: 68.48\n",
+      "Epoch 20, Validation Loss: 68.75\n",
+      "Epoch 21, Validation Loss: 70.44\n",
+      "Epoch 22, Validation Loss: 70.08\n",
+      "Epoch 23, Validation Loss: 71.08\n",
+      "Epoch 24, Validation Loss: 76.17\n",
+      "Epoch 25, Validation Loss: 71.47\n",
+      "Epoch 26, Validation Loss: 71.92\n",
+      "Epoch 27, Validation Loss: 72.65\n",
+      "Epoch 28, Validation Loss: 72.79\n",
+      "Epoch 29, Validation Loss: 72.62\n",
+      "Epoch 30, Validation Loss: 72.48\n",
+      "Epoch 31, Validation Loss: 74.20\n",
+      "Epoch 32, Validation Loss: 74.21\n",
+      "Epoch 33, Validation Loss: 71.61\n",
+      "Epoch 34, Validation Loss: 76.09\n",
+      "Epoch 35, Validation Loss: 75.25\n",
+      "Epoch 36, Validation Loss: 74.33\n",
+      "Epoch 37, Validation Loss: 73.41\n",
+      "Epoch 38, Validation Loss: 70.15\n",
+      "Epoch 39, Validation Loss: 73.19\n",
+      "Epoch 40, Validation Loss: 69.99\n",
+      "Epoch 41, Validation Loss: 70.66\n",
+      "Epoch 42, Validation Loss: 71.36\n",
+      "Epoch 43, Validation Loss: 70.53\n",
+      "Epoch 44, Validation Loss: 74.79\n",
+      "Epoch 45, Validation Loss: 70.89\n",
+      "Epoch 46, Validation Loss: 72.28\n",
+      "Epoch 47, Validation Loss: 70.95\n",
+      "Epoch 48, Validation Loss: 73.52\n",
+      "Epoch 49, Validation Loss: 70.87\n",
+      "Epoch 50, Validation Loss: 73.50\n",
+      "Epoch 51, Validation Loss: 72.89\n",
+      "Epoch 52, Validation Loss: 71.86\n",
+      "Epoch 53, Validation Loss: 72.23\n",
+      "Epoch 54, Validation Loss: 70.94\n",
+      "Epoch 55, Validation Loss: 70.04\n",
+      "Epoch 56, Validation Loss: 69.30\n",
+      "Epoch 57, Validation Loss: 70.35\n",
+      "Epoch 58, Validation Loss: 70.43\n",
+      "Epoch 59, Validation Loss: 74.11\n",
+      "Epoch 60, Validation Loss: 70.98\n",
+      "Epoch 61, Validation Loss: 73.06\n",
+      "Epoch 62, Validation Loss: 72.11\n",
+      "Epoch 63, Validation Loss: 78.87\n",
+      "Epoch 64, Validation Loss: 72.87\n",
+      "Epoch 65, Validation Loss: 71.00\n",
+      "Epoch 66, Validation Loss: 69.87\n",
+      "Epoch 67, Validation Loss: 68.34\n",
+      "Epoch 68, Validation Loss: 69.31\n",
+      "Epoch 69, Validation Loss: 70.49\n",
+      "Epoch 70, Validation Loss: 69.16\n",
+      "Epoch 71, Validation Loss: 69.30\n",
+      "Epoch 72, Validation Loss: 71.05\n",
+      "Epoch 73, Validation Loss: 70.00\n",
+      "Epoch 74, Validation Loss: 69.49\n",
+      "Epoch 75, Validation Loss: 70.00\n",
+      "Epoch 76, Validation Loss: 69.74\n",
+      "Epoch 77, Validation Loss: 70.81\n",
+      "Epoch 78, Validation Loss: 74.92\n",
+      "Epoch 79, Validation Loss: 71.48\n",
+      "Epoch 80, Validation Loss: 69.58\n",
+      "Epoch 81, Validation Loss: 76.50\n",
+      "Epoch 82, Validation Loss: 68.95\n",
+      "Epoch 83, Validation Loss: 68.26\n",
+      "Epoch 84, Validation Loss: 66.75\n",
+      "Epoch 85, Validation Loss: 69.37\n",
+      "Epoch 86, Validation Loss: 68.22\n",
+      "Epoch 87, Validation Loss: 67.52\n",
+      "Epoch 88, Validation Loss: 68.09\n",
+      "Epoch 89, Validation Loss: 70.91\n",
+      "Epoch 90, Validation Loss: 70.19\n",
+      "Epoch 91, Validation Loss: 73.50\n",
+      "Epoch 92, Validation Loss: 69.64\n",
+      "Epoch 93, Validation Loss: 67.31\n",
+      "Epoch 94, Validation Loss: 66.80\n",
+      "Epoch 95, Validation Loss: 77.21\n",
+      "Epoch 96, Validation Loss: 67.88\n",
+      "Epoch 97, Validation Loss: 71.17\n",
+      "Epoch 98, Validation Loss: 70.90\n",
+      "Epoch 99, Validation Loss: 67.62\n",
+      "Epoch 100, Validation Loss: 67.07\n",
+      "Epoch 101, Validation Loss: 69.94\n",
+      "Epoch 102, Validation Loss: 69.28\n",
+      "Epoch 103, Validation Loss: 68.40\n",
+      "Early stopping at epoch 103\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 145.78 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0a0813bd-3796-43e2-9c24-d3d210c6bc89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████| 100/100 [00:00<00:00, 219.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000        100.000000    100.000000\n",
+      "mean    65.378768          0.000236      0.001611\n",
+      "std     20.891297          0.001685      0.000616\n",
+      "min     35.462500          0.000000      0.000506\n",
+      "25%     50.886689          0.000000      0.001002\n",
+      "50%     63.855934          0.000000      0.001560\n",
+      "75%     74.839186          0.000000      0.002004\n",
+      "max    157.242822          0.013853      0.003570\n",
+      "Number of infeasible solution: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
+    "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_blocks*2):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "df.to_csv(\"result/rb_st_50-10.csv\")\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2a9d85-7f01-4468-a6ea-ae00b01770a2",
+   "id": "54dc8f72-7325-4fd8-9989-14753d210230",
    "metadata": {},
    "outputs": [],
    "source": []
