--- a/test/rosenbrock/Test Rosenbrock 50-100.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-100.ipynb
@@ -1224,9 +1224,260 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f76b5968-3bc3-4686-9486-189a0a2d46ec",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db2a9d85-7f01-4468-a6ea-ae00b01770a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5f252654-1a88-4ecc-b398-82eea21390ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e211e060-0f67-4be4-a10a-ef866122bd26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmRosenbrock\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"p\", \"a\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"p\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "642f4a25-43d8-49df-933e-81bc6caa48a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 22709.18\n",
+      "Epoch 1, Validation Loss: 4604.22\n",
+      "Epoch 2, Validation Loss: 2593.31\n",
+      "Epoch 3, Validation Loss: 2139.71\n",
+      "Epoch 4, Validation Loss: 1733.37\n",
+      "Epoch 5, Validation Loss: 1096.27\n",
+      "Epoch 6, Validation Loss: 976.33\n",
+      "Epoch 7, Validation Loss: 910.96\n",
+      "Epoch 8, Validation Loss: 901.05\n",
+      "Epoch 9, Validation Loss: 897.30\n",
+      "Epoch 10, Validation Loss: 854.55\n",
+      "Epoch 11, Validation Loss: 796.15\n",
+      "Epoch 12, Validation Loss: 773.34\n",
+      "Epoch 13, Validation Loss: 741.60\n",
+      "Epoch 14, Validation Loss: 757.11\n",
+      "Epoch 15, Validation Loss: 765.56\n",
+      "Epoch 16, Validation Loss: 758.43\n",
+      "Epoch 17, Validation Loss: 753.90\n",
+      "Epoch 18, Validation Loss: 742.92\n",
+      "Epoch 19, Validation Loss: 744.63\n",
+      "Epoch 20, Validation Loss: 731.37\n",
+      "Epoch 21, Validation Loss: 713.54\n",
+      "Epoch 22, Validation Loss: 702.99\n",
+      "Epoch 23, Validation Loss: 703.07\n",
+      "Epoch 24, Validation Loss: 709.95\n",
+      "Epoch 25, Validation Loss: 692.08\n",
+      "Epoch 26, Validation Loss: 691.50\n",
+      "Epoch 27, Validation Loss: 687.75\n",
+      "Epoch 28, Validation Loss: 686.05\n",
+      "Epoch 29, Validation Loss: 686.19\n",
+      "Epoch 30, Validation Loss: 682.40\n",
+      "Epoch 31, Validation Loss: 697.95\n",
+      "Epoch 32, Validation Loss: 670.44\n",
+      "Epoch 33, Validation Loss: 669.14\n",
+      "Epoch 34, Validation Loss: 673.34\n",
+      "Epoch 35, Validation Loss: 667.93\n",
+      "Epoch 36, Validation Loss: 670.09\n",
+      "Epoch 37, Validation Loss: 658.33\n",
+      "Epoch 38, Validation Loss: 664.93\n",
+      "Epoch 39, Validation Loss: 651.68\n",
+      "Epoch 40, Validation Loss: 653.56\n",
+      "Epoch 41, Validation Loss: 669.41\n",
+      "Epoch 42, Validation Loss: 671.12\n",
+      "Epoch 43, Validation Loss: 661.85\n",
+      "Epoch 44, Validation Loss: 655.10\n",
+      "Epoch 45, Validation Loss: 656.39\n",
+      "Epoch 46, Validation Loss: 656.57\n",
+      "Epoch 47, Validation Loss: 657.13\n",
+      "Epoch 48, Validation Loss: 669.57\n",
+      "Epoch 49, Validation Loss: 655.82\n",
+      "Epoch 50, Validation Loss: 648.55\n",
+      "Epoch 51, Validation Loss: 699.57\n",
+      "Epoch 52, Validation Loss: 651.91\n",
+      "Epoch 53, Validation Loss: 654.86\n",
+      "Epoch 54, Validation Loss: 651.08\n",
+      "Epoch 55, Validation Loss: 637.58\n",
+      "Epoch 56, Validation Loss: 645.68\n",
+      "Epoch 57, Validation Loss: 635.95\n",
+      "Epoch 58, Validation Loss: 727.26\n",
+      "Epoch 59, Validation Loss: 633.67\n",
+      "Epoch 60, Validation Loss: 647.03\n",
+      "Epoch 61, Validation Loss: 645.82\n",
+      "Epoch 62, Validation Loss: 650.19\n",
+      "Epoch 63, Validation Loss: 645.94\n",
+      "Epoch 64, Validation Loss: 645.83\n",
+      "Epoch 65, Validation Loss: 655.63\n",
+      "Epoch 66, Validation Loss: 633.71\n",
+      "Epoch 67, Validation Loss: 653.01\n",
+      "Epoch 68, Validation Loss: 653.19\n",
+      "Epoch 69, Validation Loss: 637.15\n",
+      "Epoch 70, Validation Loss: 656.51\n",
+      "Epoch 71, Validation Loss: 646.62\n",
+      "Epoch 72, Validation Loss: 642.96\n",
+      "Epoch 73, Validation Loss: 633.45\n",
+      "Epoch 74, Validation Loss: 632.03\n",
+      "Epoch 75, Validation Loss: 655.34\n",
+      "Epoch 76, Validation Loss: 630.85\n",
+      "Epoch 77, Validation Loss: 633.74\n",
+      "Epoch 78, Validation Loss: 641.04\n",
+      "Epoch 79, Validation Loss: 645.09\n",
+      "Epoch 80, Validation Loss: 635.81\n",
+      "Epoch 81, Validation Loss: 637.18\n",
+      "Epoch 82, Validation Loss: 639.59\n",
+      "Epoch 83, Validation Loss: 675.81\n",
+      "Epoch 84, Validation Loss: 643.03\n",
+      "Epoch 85, Validation Loss: 752.71\n",
+      "Epoch 86, Validation Loss: 642.60\n",
+      "Epoch 87, Validation Loss: 641.44\n",
+      "Epoch 88, Validation Loss: 636.78\n",
+      "Epoch 89, Validation Loss: 652.09\n",
+      "Epoch 90, Validation Loss: 668.63\n",
+      "Epoch 91, Validation Loss: 635.78\n",
+      "Epoch 92, Validation Loss: 637.51\n",
+      "Epoch 93, Validation Loss: 635.47\n",
+      "Epoch 94, Validation Loss: 643.72\n",
+      "Epoch 95, Validation Loss: 641.76\n",
+      "Early stopping at epoch 95\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 121.56 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0ce73ba2-8e55-4b2b-8555-095e2930c8cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:02<00:00, 45.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  100.000000             100.0    100.000000\n",
+      "mean   634.949015               0.0      0.001740\n",
+      "std     70.234953               0.0      0.000688\n",
+      "min    545.824098               0.0      0.000938\n",
+      "25%    588.232878               0.0      0.001006\n",
+      "50%    619.464327               0.0      0.001786\n",
+      "75%    649.840367               0.0      0.002005\n",
+      "max    878.246940               0.0      0.004637\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
+    "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_blocks*2):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "df.to_csv(\"result/rb_st_50-100.csv\")\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2a9d85-7f01-4468-a6ea-ae00b01770a2",
+   "id": "2cbc6d8e-101b-4697-9acb-31ab0be23c26",
    "metadata": {},
    "outputs": [],
    "source": []
