--- a/test/rosenbrock/Test Rosenbrock 50-1000.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-1000.ipynb
@@ -963,9 +963,238 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2986f49-9fac-40c9-879a-8310e2b63236",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db2a9d85-7f01-4468-a6ea-ae00b01770a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c1fd925e-7f80-46d4-9c35-c21f24a25c10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "382b643d-2784-4898-9a16-8cc29e5ae616",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmRosenbrock\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"p\", \"a\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"p\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4a657a81-c4e9-4ae4-a065-672bbf7cd323",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 226551.41\n",
+      "Epoch 1, Validation Loss: 55871.21\n",
+      "Epoch 2, Validation Loss: 52922.65\n",
+      "Epoch 3, Validation Loss: 49271.24\n",
+      "Epoch 4, Validation Loss: 48145.26\n",
+      "Epoch 5, Validation Loss: 40413.80\n",
+      "Epoch 6, Validation Loss: 27387.58\n",
+      "Epoch 7, Validation Loss: 24182.88\n",
+      "Epoch 8, Validation Loss: 18316.17\n",
+      "Epoch 9, Validation Loss: 14350.27\n",
+      "Epoch 10, Validation Loss: 14028.93\n",
+      "Epoch 11, Validation Loss: 14611.12\n",
+      "Epoch 12, Validation Loss: 12413.66\n",
+      "Epoch 13, Validation Loss: 25613.50\n",
+      "Epoch 14, Validation Loss: 11987.83\n",
+      "Epoch 15, Validation Loss: 13011.59\n",
+      "Epoch 16, Validation Loss: 10972.10\n",
+      "Epoch 17, Validation Loss: 11717.30\n",
+      "Epoch 18, Validation Loss: 10446.19\n",
+      "Epoch 19, Validation Loss: 13584.45\n",
+      "Epoch 20, Validation Loss: 21774.82\n",
+      "Epoch 21, Validation Loss: 10303.77\n",
+      "Epoch 22, Validation Loss: 9079.90\n",
+      "Epoch 23, Validation Loss: 26099.71\n",
+      "Epoch 24, Validation Loss: 9577.48\n",
+      "Epoch 25, Validation Loss: 11399.56\n",
+      "Epoch 26, Validation Loss: 8562.43\n",
+      "Epoch 27, Validation Loss: 9155.26\n",
+      "Epoch 28, Validation Loss: 7781.69\n",
+      "Epoch 29, Validation Loss: 8545.07\n",
+      "Epoch 30, Validation Loss: 14865.23\n",
+      "Epoch 31, Validation Loss: 7436.28\n",
+      "Epoch 32, Validation Loss: 21976.05\n",
+      "Epoch 33, Validation Loss: 7933.03\n",
+      "Epoch 34, Validation Loss: 8933.90\n",
+      "Epoch 35, Validation Loss: 9103.96\n",
+      "Epoch 36, Validation Loss: 8565.82\n",
+      "Epoch 37, Validation Loss: 8950.16\n",
+      "Epoch 38, Validation Loss: 7433.70\n",
+      "Epoch 39, Validation Loss: 8608.45\n",
+      "Epoch 40, Validation Loss: 7676.27\n",
+      "Epoch 41, Validation Loss: 7286.44\n",
+      "Epoch 42, Validation Loss: 8385.93\n",
+      "Epoch 43, Validation Loss: 9402.71\n",
+      "Epoch 44, Validation Loss: 18272.63\n",
+      "Epoch 45, Validation Loss: 8991.92\n",
+      "Epoch 46, Validation Loss: 8694.85\n",
+      "Epoch 47, Validation Loss: 7074.19\n",
+      "Epoch 48, Validation Loss: 8113.78\n",
+      "Epoch 49, Validation Loss: 7525.59\n",
+      "Epoch 50, Validation Loss: 6833.93\n",
+      "Epoch 51, Validation Loss: 6621.02\n",
+      "Epoch 52, Validation Loss: 6971.44\n",
+      "Epoch 53, Validation Loss: 9110.40\n",
+      "Epoch 54, Validation Loss: 6596.65\n",
+      "Epoch 55, Validation Loss: 7236.90\n",
+      "Epoch 56, Validation Loss: 6888.67\n",
+      "Epoch 57, Validation Loss: 8355.59\n",
+      "Epoch 58, Validation Loss: 8207.11\n",
+      "Epoch 59, Validation Loss: 8354.04\n",
+      "Epoch 60, Validation Loss: 8747.19\n",
+      "Epoch 61, Validation Loss: 8957.58\n",
+      "Epoch 62, Validation Loss: 7003.66\n",
+      "Epoch 63, Validation Loss: 8380.22\n",
+      "Epoch 64, Validation Loss: 11799.37\n",
+      "Epoch 65, Validation Loss: 7704.15\n",
+      "Epoch 66, Validation Loss: 7150.64\n",
+      "Epoch 67, Validation Loss: 7227.60\n",
+      "Epoch 68, Validation Loss: 12743.27\n",
+      "Epoch 69, Validation Loss: 7422.90\n",
+      "Epoch 70, Validation Loss: 7395.74\n",
+      "Epoch 71, Validation Loss: 12379.20\n",
+      "Epoch 72, Validation Loss: 9023.24\n",
+      "Epoch 73, Validation Loss: 16907.75\n",
+      "Early stopping at epoch 73\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 101.28 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "1428a1c4-2d3b-4bf9-8470-826a0ddad920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [00:17<00:00,  5.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count   100.000000             100.0    100.000000\n",
+      "mean   6566.854725               0.0      0.002689\n",
+      "std     659.557880               0.0      0.001257\n",
+      "min    5496.507491               0.0      0.001005\n",
+      "25%    6108.953148               0.0      0.002013\n",
+      "50%    6441.978779               0.0      0.002582\n",
+      "75%    6771.747828               0.0      0.003006\n",
+      "max    8764.861812               0.0      0.013798\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
+    "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_blocks*2):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "df.to_csv(\"result/rb_st_50-1000.csv\")\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2a9d85-7f01-4468-a6ea-ae00b01770a2",
+   "id": "7f038b4a-7343-4662-88db-78ef4c99a80d",
    "metadata": {},
    "outputs": [],
    "source": []
