--- a/test/rosenbrock/Test Rosenbrock 50-10000.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-10000.ipynb
@@ -3061,9 +3061,289 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69c94147-bd22-4295-9ebf-d9c4c4e18d2d",
+   "metadata": {},
+   "source": [
+    "### STE Rounding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "db2a9d85-7f01-4468-a6ea-ae00b01770a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random seed\n",
+    "np.random.seed(42)\n",
+    "torch.manual_seed(42)\n",
+    "torch.cuda.manual_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2db40372-96d1-461d-b378-5a5544db4383",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 5       # number of hidden layers for solution mapping\n",
+    "hsize = 16            # width of hidden layers for solution mapping\n",
+    "lr = 1e-3             # learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3f438e80-4607-4c2b-836b-066387769899",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmRosenbrock\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundSTEModel\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"p\", \"a\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "rnd = roundSTEModel(param_keys=[\"p\", \"a\"], var_keys=[\"x\"],  output_keys=[\"x_rnd\"], int_ind=model.int_ind, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "14691445-28e6-4364-9d7e-0e7b65ad77f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Validation Loss: 2270309.39\n",
+      "Epoch 1, Validation Loss: 607560.49\n",
+      "Epoch 2, Validation Loss: 562869.86\n",
+      "Epoch 3, Validation Loss: 545407.88\n",
+      "Epoch 4, Validation Loss: 529394.04\n",
+      "Epoch 5, Validation Loss: 548448.44\n",
+      "Epoch 6, Validation Loss: 506316.46\n",
+      "Epoch 7, Validation Loss: 455785.43\n",
+      "Epoch 8, Validation Loss: 479274.73\n",
+      "Epoch 9, Validation Loss: 1830764.43\n",
+      "Epoch 10, Validation Loss: 617360.01\n",
+      "Epoch 11, Validation Loss: 624843.02\n",
+      "Epoch 12, Validation Loss: 396752.18\n",
+      "Epoch 13, Validation Loss: 561413.43\n",
+      "Epoch 14, Validation Loss: 362575.21\n",
+      "Epoch 15, Validation Loss: 573894.39\n",
+      "Epoch 16, Validation Loss: 423855.20\n",
+      "Epoch 17, Validation Loss: 353895.04\n",
+      "Epoch 18, Validation Loss: 383910.57\n",
+      "Epoch 19, Validation Loss: 361177.79\n",
+      "Epoch 20, Validation Loss: 612085.78\n",
+      "Epoch 21, Validation Loss: 351211.70\n",
+      "Epoch 22, Validation Loss: 369439.86\n",
+      "Epoch 23, Validation Loss: 304853.19\n",
+      "Epoch 24, Validation Loss: 295741.54\n",
+      "Epoch 25, Validation Loss: 288538.73\n",
+      "Epoch 26, Validation Loss: 306635.38\n",
+      "Epoch 27, Validation Loss: 312084.63\n",
+      "Epoch 28, Validation Loss: 481707.56\n",
+      "Epoch 29, Validation Loss: 291844.47\n",
+      "Epoch 30, Validation Loss: 287420.46\n",
+      "Epoch 31, Validation Loss: 265359.17\n",
+      "Epoch 32, Validation Loss: 329562.12\n",
+      "Epoch 33, Validation Loss: 266591.04\n",
+      "Epoch 34, Validation Loss: 289274.40\n",
+      "Epoch 35, Validation Loss: 789251.75\n",
+      "Epoch 36, Validation Loss: 378117.74\n",
+      "Epoch 37, Validation Loss: 360891.58\n",
+      "Epoch 38, Validation Loss: 352713.09\n",
+      "Epoch 39, Validation Loss: 295433.71\n",
+      "Epoch 40, Validation Loss: 441469.26\n",
+      "Epoch 41, Validation Loss: 307278.69\n",
+      "Epoch 42, Validation Loss: 255763.05\n",
+      "Epoch 43, Validation Loss: 352463.08\n",
+      "Epoch 44, Validation Loss: 300684.26\n",
+      "Epoch 45, Validation Loss: 335603.64\n",
+      "Epoch 46, Validation Loss: 258224.52\n",
+      "Epoch 47, Validation Loss: 470860.32\n",
+      "Epoch 48, Validation Loss: 533151.68\n",
+      "Epoch 49, Validation Loss: 228682.59\n",
+      "Epoch 50, Validation Loss: 229081.99\n",
+      "Epoch 51, Validation Loss: 346335.41\n",
+      "Epoch 52, Validation Loss: 233042.20\n",
+      "Epoch 53, Validation Loss: 232209.34\n",
+      "Epoch 54, Validation Loss: 217359.11\n",
+      "Epoch 55, Validation Loss: 226780.13\n",
+      "Epoch 56, Validation Loss: 211584.12\n",
+      "Epoch 57, Validation Loss: 456107.04\n",
+      "Epoch 58, Validation Loss: 271801.26\n",
+      "Epoch 59, Validation Loss: 281070.10\n",
+      "Epoch 60, Validation Loss: 221099.31\n",
+      "Epoch 61, Validation Loss: 213086.96\n",
+      "Epoch 62, Validation Loss: 298874.58\n",
+      "Epoch 63, Validation Loss: 361571.06\n",
+      "Epoch 64, Validation Loss: 195440.15\n",
+      "Epoch 65, Validation Loss: 383271.87\n",
+      "Epoch 66, Validation Loss: 264479.64\n",
+      "Epoch 67, Validation Loss: 226713.12\n",
+      "Epoch 68, Validation Loss: 197285.54\n",
+      "Epoch 69, Validation Loss: 228446.77\n",
+      "Epoch 70, Validation Loss: 354136.42\n",
+      "Epoch 71, Validation Loss: 238994.62\n",
+      "Epoch 72, Validation Loss: 196681.88\n",
+      "Epoch 73, Validation Loss: 311635.59\n",
+      "Epoch 74, Validation Loss: 257928.79\n",
+      "Epoch 75, Validation Loss: 259466.43\n",
+      "Epoch 76, Validation Loss: 267918.08\n",
+      "Epoch 77, Validation Loss: 186009.88\n",
+      "Epoch 78, Validation Loss: 208824.49\n",
+      "Epoch 79, Validation Loss: 187880.99\n",
+      "Epoch 80, Validation Loss: 466456.92\n",
+      "Epoch 81, Validation Loss: 229617.27\n",
+      "Epoch 82, Validation Loss: 418726.81\n",
+      "Epoch 83, Validation Loss: 192913.30\n",
+      "Epoch 84, Validation Loss: 683800.80\n",
+      "Epoch 85, Validation Loss: 213123.72\n",
+      "Epoch 86, Validation Loss: 267121.46\n",
+      "Epoch 87, Validation Loss: 403881.09\n",
+      "Epoch 88, Validation Loss: 804102.81\n",
+      "Epoch 89, Validation Loss: 382892.18\n",
+      "Epoch 90, Validation Loss: 232071.22\n",
+      "Epoch 91, Validation Loss: 270341.97\n",
+      "Epoch 92, Validation Loss: 368119.43\n",
+      "Epoch 93, Validation Loss: 180410.25\n",
+      "Epoch 94, Validation Loss: 185427.95\n",
+      "Epoch 95, Validation Loss: 182647.30\n",
+      "Epoch 96, Validation Loss: 180488.81\n",
+      "Epoch 97, Validation Loss: 208320.63\n",
+      "Epoch 98, Validation Loss: 197957.33\n",
+      "Epoch 99, Validation Loss: 252420.86\n",
+      "Epoch 100, Validation Loss: 175185.38\n",
+      "Epoch 101, Validation Loss: 518741.99\n",
+      "Epoch 102, Validation Loss: 197275.74\n",
+      "Epoch 103, Validation Loss: 248199.47\n",
+      "Epoch 104, Validation Loss: 205214.65\n",
+      "Epoch 105, Validation Loss: 165210.27\n",
+      "Epoch 106, Validation Loss: 327690.54\n",
+      "Epoch 107, Validation Loss: 218362.00\n",
+      "Epoch 108, Validation Loss: 185067.84\n",
+      "Epoch 109, Validation Loss: 346186.51\n",
+      "Epoch 110, Validation Loss: 386677.31\n",
+      "Epoch 111, Validation Loss: 176929.23\n",
+      "Epoch 112, Validation Loss: 299357.60\n",
+      "Epoch 113, Validation Loss: 427240.38\n",
+      "Epoch 114, Validation Loss: 193666.29\n",
+      "Epoch 115, Validation Loss: 347579.62\n",
+      "Epoch 116, Validation Loss: 253519.32\n",
+      "Epoch 117, Validation Loss: 176235.94\n",
+      "Epoch 118, Validation Loss: 375010.35\n",
+      "Epoch 119, Validation Loss: 196117.13\n",
+      "Epoch 120, Validation Loss: 178643.21\n",
+      "Epoch 121, Validation Loss: 369306.52\n",
+      "Epoch 122, Validation Loss: 168935.62\n",
+      "Epoch 123, Validation Loss: 277141.53\n",
+      "Epoch 124, Validation Loss: 294466.48\n",
+      "Early stopping at epoch 124\n",
+      "Best model loaded.\n",
+      "Training complete.\n",
+      "The training time is 292.83 sec.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.problem.neuromancer.trainer import trainer\n",
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "# training for the rounding problem\n",
+    "my_trainer.train(loader_train, loader_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "9cf38af4-0fd5-44d3-8d70-961b76c5a43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [03:02<00:00,  1.82s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             Obj Val  Constraints Viol  Elapsed Time\n",
+      "count     100.000000        100.000000    100.000000\n",
+      "mean    72904.017814       1116.434110      0.006589\n",
+      "std     20744.559860       1941.529684      0.001487\n",
+      "min     37120.702194          0.000000      0.004511\n",
+      "25%     57189.760813          0.000000      0.005604\n",
+      "50%     72533.574198          0.000000      0.006099\n",
+      "75%     79193.075379       1966.710396      0.006837\n",
+      "max    118629.147466       8897.434940      0.012715\n",
+      "Number of infeasible solution: 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.heuristic import naive_round\n",
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
+    "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    components.eval()\n",
+    "    tick = time.time()\n",
+    "    with torch.no_grad():\n",
+    "        for comp in components:\n",
+    "            datapoints.update(comp(datapoints))\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # assign vars\n",
+    "    x = datapoints[\"x\"]\n",
+    "    for i in range(num_blocks*2):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval_rel, _ = model.get_val()\n",
+    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "df.to_csv(\"result/rb_st_50-10000.csv\")\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2a9d85-7f01-4468-a6ea-ae00b01770a2",
+   "id": "3631f4b3-55f9-478b-b4d3-27b303a2d832",
    "metadata": {},
    "outputs": [],
    "source": []
