--- a/test/nonconvex/Test Nonconvex 500-500.ipynb
+++ b/test/nonconvex/Test Nonconvex 500-500.ipynb
@@ -253,7 +253,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -513,7 +513,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -848,7 +848,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -1146,7 +1146,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
