--- a/test/quadratic/Test Quadratic 100-100.ipynb
+++ b/test/quadratic/Test Quadratic 100-100.ipynb
@@ -541,7 +541,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -780,7 +780,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -1063,7 +1063,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -1329,7 +1329,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
