--- a/test/quadratic/Test Quadratic 5-5.ipynb
+++ b/test/quadratic/Test Quadratic 5-5.ipynb
@@ -649,7 +649,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -952,7 +952,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -1297,7 +1297,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -1566,7 +1566,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
