--- a/test/quadratic/Test Quadratic 500-500.ipynb
+++ b/test/quadratic/Test Quadratic 500-500.ipynb
@@ -552,7 +552,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -817,7 +817,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -1152,7 +1152,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -1450,7 +1450,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
