--- a/test/rosenbrock/Test Rosenbrock 50-10000.ipynb
+++ b/test/rosenbrock/Test Rosenbrock 50-10000.ipynb
@@ -2398,7 +2398,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -2639,7 +2639,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -2989,7 +2989,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
@@ -3269,7 +3269,7 @@
     "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
     "optimizer = torch.optim.AdamW(components.parameters(), lr=lr)\n",
     "# create a trainer for the problem\n",
-    "my_trainer = trainer(components, loss_fn, optimizer, epochs, patience, warmup, device=\"cuda\")\n",
+    "my_trainer = trainer(components, loss_fn, optimizer, epochs=epochs, patience=patience, warmup=warmup, device=\"cuda\")\n",
     "# training for the rounding problem\n",
     "my_trainer.train(loader_train, loader_dev)"
    ]
